# rust-modbus-rtu

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: crc.rs  exception.rs  function.rs  function_kind.rs  lib.rs  packet.rs  request.rs  response.rs  utils.rs
src/address_area/: error.rs  mod.rs
src/common/: baudrate.rs  crc.rs  exception.rs  mod.rs  packet_error.rs  request.rs  request_form.rs
src/common/baudrate/: mod.rs  test.rs
src/common/crc/: mod.rs  test.rs
src/core/: baudrate.rs  data.rs  mod.rs
src/data/: constraint.rs  mod.rs
src/data_area/: error.rs  mod.rs
src/error/: function.rs  mod.rs  request_packet.rs  response_packet.rs  send.rs
src/features/: master.rs
src/master/: sync.rs
src/packets/: mod.rs
src/slave/: mod.rs
src/slave/data_model/: mod.rs  structure.rs
src/slave/data_struct/: mod.rs
