[package]
name = "modbus-rtu"
version = "1.1.0"
edition = "2024"
authors = ["Park JiSoo <im@jababa.im>"]
description = "Standard Modbus RTU protocols"
license = "MIT"

[features]
default = ["master"]
master = ["serialport"]
unlimited_packet_size = []
enforce_broadcast = []

[dependencies]
serialport = { version = "4.8", optional = true }
